force-app/main/default/objects/clofor_com_cfs__BankACBal__c/fields/clofor_com_cfs__AmountPaidUSDACBal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountPaidUSDACBal__c</fullName>
    <label>AMOUNT PAID(USD)-A/C BAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>