force-app/main/default/objects/clofor_com_cfs__BankACBal__c/fields/clofor_com_cfs__AmountReceivedLocalACBal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountReceivedLocalACBal__c</fullName>
    <label>AMOUNT RECEIVED(LOCAL)-A/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>