force-app/main/default/objects/clofor_com_cfs__BankACBal__c/fields/clofor_com_cfs__AmountReceivedLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountReceivedLocalFormula__c</fullName>
    <formula>clofor_com_cfs__BankTransactionID__r.clofor_com_cfs__AmountReceivedLocal__c</formula>
    <label>AMOUNT RECEIVED(LOCAL)-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>