force-app/main/default/objects/clofor_com_cfs__BankACBal__c/fields/clofor_com_cfs__AmountReceivedUSDACBal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountReceivedUSDACBal__c</fullName>
    <label>AMOUNT RECEIVED(USD)-AC BAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>